<resources>
    <string name="app_name">TextAndTranslate</string>
    <string name="text_detected_from_the_image_will_be_displayed_here">Text detected from the image will be displayed here</string>
    <string name="pick_image">Pick Image</string>
    <string name="translated_text_hint">Translated text</string>
    <string name="downloaded_models_label">Downloaded models: %1$s</string>
    <string name="translate_progress">Translating&#8230;</string>
    <string name="delete_model">Delete Model</string>
    <string name="download_model">Download Model</string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="source_text_hint">Source text</string>
</resources>