<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/action_bar_layout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/sourceLangSelector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sourceText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/source_text_hint" />

        </ScrollView>
    </com.google.android.material.textfield.TextInputLayout>
    <Spinner
        android:id="@+id/sourceLangSelector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/buttonSyncSource"
        app:layout_constraintEnd_toStartOf="@id/buttonSwitchLang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSwitchLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="Swap"
        app:icon="@drawable/baseline_compare_arrows_24"
        app:layout_constraintEnd_toStartOf="@+id/targetLangSelector"
        app:layout_constraintStart_toEndOf="@+id/sourceLangSelector"
        app:layout_constraintTop_toTopOf="@id/sourceLangSelector" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonTranslate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Translate"
        app:layout_constraintBottom_toTopOf="@+id/downloadedModels"
        app:layout_constraintEnd_toEndOf="@id/buttonSwitchLang"
        app:layout_constraintStart_toStartOf="@id/buttonSwitchLang"
        app:layout_constraintTop_toBottomOf="@+id/buttonSwitchLang"
        />

    <Spinner
        android:id="@+id/targetLangSelector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/sourceLangSelector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonSwitchLang"
        app:layout_constraintTop_toTopOf="@id/sourceLangSelector" />

    <ToggleButton
        android:id="@+id/buttonSyncSource"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textOff="@string/download_model"
        android:textOn="@string/delete_model"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@id/downloadedModels"
        app:layout_constraintEnd_toEndOf="@+id/sourceLangSelector"
        app:layout_constraintStart_toStartOf="@id/sourceLangSelector"
        app:layout_constraintTop_toBottomOf="@id/sourceLangSelector" />

    <ToggleButton
        android:id="@+id/buttonSyncTarget"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textOff="@string/download_model"
        android:textOn="@string/delete_model"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/buttonSyncSource"
        app:layout_constraintEnd_toEndOf="@id/targetLangSelector"
        app:layout_constraintStart_toStartOf="@id/targetLangSelector"
        app:layout_constraintTop_toTopOf="@id/buttonSyncSource" />

    <TextView
        android:id="@+id/downloadedModels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/downloaded_models_label"
        app:layout_constraintBottom_toTopOf="@id/targetScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSyncSource" />

    <ScrollView
        android:id="@+id/targetScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/downloadedModels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/targetText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/translated_text_hint" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>